# chatglm_cpp_QT

./: CMakeLists.txt  README.md  chat_thread.cpp  chat_thread.h  widget.cpp  widget.h  widget.ui
android/: AndroidManifest.xml
